# Yandex360Client

./: .env.dist  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
aio_ya360_client/: aio_ya360_client.py  yandex360client.py
aio_ya_360/: __init__.py  departments.py  groups.py  organizations.py  settings.py  users.py
aio_ya_360/base/: __init__.py  client.py  group_member.py  request_params.py  secrets.py  shared_classes.py  token.py  urls.py
aio_ya_360/docs/: environments.md  installation.md  usage.md
aio_ya_360/exceptions/: __init__.py  base_exception.py
yandex360client/: __init__.py  yandex360client.py
