[tool.poetry]
name = "yandex360client"
version = "0.1.0"
description = ""
authors = ["dzenbots <vv.khritkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
environs = "^11.2.1"
requests = "^2.32.3"
configparser = "^7.1.0"
loguru = "^0.7.2"
aiohttp = "^3.11.8"
certifi = "^2024.8.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
